Table Movie {
  id int [pk, increment]
  title varchar(255) [not null]
  description text
  age_limit int
  duration int [not null]
  release_year int
  country_id int [ref: > Country.id]
}

Table Movie_Details {
  movie_id int [pk, ref: > Movie.id]
  rating decimal(3,1)
  number_of_views int [default: 0]
  website_id int [ref: > Website.id]
}

Table Genre {
  id int [pk, increment]
  name varchar(255) [not null, unique]
}

Table Movie_Genre {
  movie_id int [ref: > Movie.id]
  genre_id int [ref: > Genre.id]
  indexes {
    (movie_id, genre_id) [pk]
  }
}

Table Director {
  id int [pk, increment]
  name varchar(255) [not null]
  country_id int [ref: > Country.id]
}

Table Movie_Director {
  movie_id int [ref: > Movie.id]
  director_id int [ref: > Director.id]
  indexes {
    (movie_id, director_id) [pk]
  }
}

Table Production_Company {
  id int [pk, increment]
  name varchar(255) [not null]
  website_id int [ref: > Website.id]
}

Table Movie_Production {
  movie_id int [ref: > Movie.id]
  company_id int [ref: > Production_Company.id]
  role varchar(50) [note: "producer/publisher/etc"]
  indexes {
    (movie_id, company_id, role) [pk]
  }
}

Table Country {
  id int [pk, increment]
  name varchar(255) [not null, unique]
}

Table Website {
  id int [pk, increment]
  name varchar(255)
  url varchar(511) [not null, unique]
}

Table Collection {
  id int [pk, increment]
  name varchar(255) [not null]
  description text
}

Table Movie_Collection {
  movie_id int [ref: > Movie.id]
  collection_id int [ref: > Collection.id]
  indexes {
    (movie_id, collection_id) [pk]
  }
}

Table User {
  id int [pk, increment]
  name varchar(255) [not null]
  birth_date date [not null]
}

Table User_Favorite {
  user_id int [ref: > User.id]
  movie_id int [ref: > Movie.id]
  indexes {
    (user_id, movie_id) [pk]
  }
}

Table Carrier_Type {
  id int [pk, increment]
  name varchar(255) [not null, unique]
}

Table Carrier {
  id int [pk, increment]
  type_id int [ref: > Carrier_Type.id]
  capacity_gb int
  name varchar(255)
}

Table Recording_Format {
  id int [pk, increment]
  name varchar(255) [not null, unique]
}

Table Movie_Carrier {
  movie_id int [ref: > Movie.id]
  carrier_id int [ref: > Carrier.id]
  format_id int [ref: > Recording_Format.id]
  indexes {
    (movie_id, carrier_id, format_id) [pk]
  }
}

Table Rental_Location {
  id int [pk, increment]
  name varchar(255) [not null]
  website_id int [ref: > Website.id]
}

Table Address {
  id int [pk, increment]
  location_id int [ref: > Rental_Location.id]
  country_id int [ref: > Country.id]
  street varchar(255)
  building varchar(50)
  notes text
}

Table Rental {
  id int [pk, increment]
  carrier_id int [ref: > Carrier.id]
  location_id int [ref: > Rental_Location.id]
  start_date datetime [not null]
  end_date datetime
  user_id int [ref: > User.id]
}